Using macro to encapsule the code that will be duplicated multiple times
Also add fputc() to get info.

--- a/HW_2/Makefile
+++ b/HW_2/Makefile
@@ -3,7 +3,7 @@ CC := gcc
 CFLAGS := -O0 -g3 -std=gnu99 -Wall
 LFLAGS := -o
 INJECT_FLAGS := -shared -fPIC
-
+TEST_SOURCE := hw2_test.c src/test_func.c
 
 TARGET := hw2_test inject.so
 
@@ -15,7 +15,7 @@ run:$(TARGET)
 	LD_PRELOAD=./inject.so ./hw2_test
 
 
-hw2_test:hw2_test.c
+hw2_test:$(TEST_SOURCE)
 	$(CC) $(CFLAGS) $^ -o $@
 
 inject.so:inject.c
