Add 5 more api and strip unnecessarily info

--- a/HW_2/Makefile
+++ b/HW_2/Makefile
@@ -1,27 +1,29 @@
 CC := gcc
-#CFLAGS := -O2 -std=gnu99 -Wall
-CFLAGS := -O0 -g3 -std=gnu99 -Wall
+CFLAGS := -O2 -std=gnu99 -Wall
+#CFLAGS := -O0 -g3 -std=gnu99 -Wall
 LFLAGS := -o
 INJECT_FLAGS := -shared -fPIC
 TEST_SOURCE := hw2_test.c src/test_func.c
-
-TARGET := hw2_test inject.so
+PRELOAD_NAME := hw2.so
+TARGET := hw2_test $(PRELOAD_NAME)
 
 .PHONY:clean
 
 all:$(TARGET)
+	strip --strip-unneeded $(PRELOAD_NAME)
+	objcopy -R .comment -R .note.ABI-tag -R .gnu.version $(PRELOAD_NAME)
 
 run:$(TARGET)
-	LD_PRELOAD=./inject.so ./hw2_test
+	LD_PRELOAD=./$(PRELOAD_NAME) ./hw2_test
 
 gdb:$(TARGET)
-	LD_PRELOAD=./inject.so gdbtui ./hw2_test
+	LD_PRELOAD=./$(PRELOAD_NAME) gdbtui ./hw2_test
 
 hw2_test:$(TEST_SOURCE)
 	$(CC) $(CFLAGS) $^ -o $@
 
-inject.so:inject.c
-	$(CC) -g -o $@ $(INJECT_FLAGS) $< -ldl
+$(PRELOAD_NAME):inject.c
+	$(CC) -O0 -std=gnu99 -o $@ $(INJECT_FLAGS) $< -ldl
 
 
 
