Change to g++ for future using

--- a/HW_3/Makefile
+++ b/HW_3/Makefile
@@ -1,23 +1,25 @@
 CC := gcc
+CPP := g++
 #CFLAGS := -O2 -std=gnu99 -Wall -c
-CFLAGS := -O0 -g3 -std=gnu99 -Wall -c
+#CFLAGS := -O0 -g3 -std=gnu99 -Wall -c
+CFLAGS := -O0 -g3 -std=c++17 -Wall -c
 LFLAGS := -o
 
 TARGET := hw3
-SOURCE := main.c
+SOURCE := main.cpp
 OBJECTS := $(SOURCE).o
 
 
 all:$(TARGET)
 
 $(TARGET):$(OBJECTS)
-	$(CC) $(LFLAGS) $@ $^
+	$(CPP) $(LFLAGS) $@ $^
 
 gdb:$(TARGET)
 	gdb -tui ./$(TARGET)
 
 $(OBJECTS):$(SOURCE)
-	$(CC) $(CFLAGS) $^ -o $@
+	$(CPP) $(CFLAGS) $^ -o $@
 
 clean:
 	rm -f $(TARGET) $(OBJECTS)
