Setup blocking connection

--- a/HW_4/Makefile
+++ b/HW_4/Makefile
@@ -1,12 +1,12 @@
 
 CC	= gcc
-CFLAGS	= -Wall -g -I/usr/include/ncurses
+CFLAGS	= -Wall -g -I/usr/include/ncurses -O0
 LDFLAGS	= -lncurses -pthread
-PROGS	= sample
+PROGS	= othello
 
 all: $(PROGS)
 
-sample: sample.o othello.o
+$(PROGS): othello.o othello_lib.o
 	$(CC) -o $@ $^ $(LDFLAGS)
 
 %.o: %.c
