Switch to CPP for using container

--- a/HW_4/Makefile
+++ b/HW_4/Makefile
@@ -1,18 +1,20 @@
 
-CC	= gcc
+CC	= g++
 CFLAGS	= -Wall -g -I/usr/include/ncurses -O0
 LDFLAGS	= -lncurses -pthread
 PROGS	= othello
 
+P ?= 12345
+
 all: $(PROGS)
 
 gdb_client: $(PROGS)
-	gdbtui --args ./$(PROGS) -c localhost:12345
+	gdbtui --args ./$(PROGS) -c localhost:$(P)
 
 $(PROGS): othello.o othello_lib.o
 	$(CC) -o $@ $^ $(LDFLAGS)
 
-%.o: %.c
+%.o: %.cpp
 	$(CC) -c $(CFLAGS) $<
 
 clean:
